--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "cheerio": "^0.19.0",
     "express": "^4.12.3",
-    "request": "~2.26.0"
+    "request": "~2.26.0",
+    "mongoose": "~4.0.2"
   }
 }
