--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
-  "name": "iciba",
-  "description": "ICIBA SDK",
-  "engines": {
-    "node": ">= 0.10.0"
-  },
-  "scripts": {
-    "test": "grunt nodeunit"
-  },
-  "devDependencies": {
-    "grunt-contrib-jshint": "~0.6.0",
-    "grunt-contrib-nodeunit": "~0.2.0",
-    "grunt-contrib-watch": "~0.4.0",
-    "grunt": "~0.4.1"
-  },
-  "keywords": [],
-  "dependencies": {
-    "cheerio": "^0.19.0",
-    "express": "^4.12.3",
-    "request": "~2.26.0",
-    "mongoose": "~4.0.2"
-  }
+    "name": "iciba",
+    "description": "ICIBA SDK",
+    "engines": {
+        "node": ">= 0.10.0"
+    },
+    "scripts": {
+        "test": "grunt nodeunit"
+    },
+    "devDependencies": {
+        "grunt-contrib-jshint": "~0.6.0",
+        "grunt-contrib-nodeunit": "~0.2.0",
+        "grunt-contrib-watch": "~0.4.0",
+        "grunt": "~0.4.1"
+    },
+    "keywords": [],
+    "dependencies": {
+        "cheerio": "^0.19.0",
+        "express": "^4.12.3",
+        "request": "~2.26.0",
+        "mongoose": "~4.0.2",
+        "async": "~0.9.0",
+        "mkdirp": "^0.5.0",
+        "underscore": "~1.8.3",
+        "winston": "~1.0.0"
+    }
 }
